cabal-version: 2.2
name:
  fs
version:
  0.1
synopsis:
  filesystem datastructure
description:
  filesystem datastructure for static filesystems
bug-reports:
  https://github.com/chessai/fs#issues
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  2020 chessai
category:
  Data
build-type:
  Simple
extra-source-files:
  CHANGELOG.md

library
  hs-source-dirs:
    src
  exposed-modules:
    Fs
  build-depends:
    , base
    , path
    , path-io
    , text
  default-language:
    Haskell2010
