cabal-version: 2.2
name:
  fs
version:
  0.1
synopsis:
  filesystem datastructure
description:
  filesystem datastructure for static filesystems
bug-reports:
  https://github.com/chessai/fs#issues
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  2020 chessai
category:
  Data
build-type:
  Simple
extra-source-files:
  CHANGELOG.md
tested-with:
  GHC==8.10.1,GHC==8.8.3,GHC==8.6.5,GHC==8.4.4

library
  hs-source-dirs:
    src
  exposed-modules:
    Fs
  build-depends:
    , base >= 4.11 && < 5
    , path
    , path-io
    , text
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    git://github.com/chessai/fs.git


